@@ -1,3 +1,4 @@
+# $Id$
 use strict;
 
 use DBI;
@@ -17,7 +18,7 @@ unless (    ( $priv{'CREATE TABLE'} or $priv{'CREATE ANY TABLE'} )
     plan skip_all => q{requires permissions 'CREATE TABLE' and 'DROP TABLE'};
 }
 
-plan tests => 5;
+plan tests => 9;
 
 $dbh->do( 'DROP TABLE RT13865' );
 
@@ -29,31 +30,50 @@ CREATE TABLE RT13865(
     COL_DECIMAL NUMBER(9,2),
     COL_FLOAT FLOAT(126),
     COL_VC2   VARCHAR2(67),
-    COL_VC2_69CHAR  VARCHAR2(69 CHAR)
-) 
+    COL_VC2_69CHAR  VARCHAR2(69 CHAR),
+    COL_NVC2  NVARCHAR2(69),
+    COL_NC    NCHAR(69),
+    COL_CHAR  CHAR(67),
+    COL_CHAR_69CHAR  CHAR(69 CHAR)
+)
 END_SQL
 
 my $col_h = $dbh->column_info( undef, undef, 'RT13865', 'COL_INTEGER' );
 
-is $col_h->fetchrow_hashref->{COLUMN_SIZE} => 38, 
+is $col_h->fetchrow_hashref->{COLUMN_SIZE} => 38,
     "INTEGER is alias for NUMBER(38)";
 
 $col_h = $dbh->column_info( undef, undef, 'RT13865', 'COL_NUMBER_37' );
-is $col_h->fetchrow_hashref->{COLUMN_SIZE} => 37, 
+is $col_h->fetchrow_hashref->{COLUMN_SIZE} => 37,
     "NUMBER(37)";
 
 $col_h = $dbh->column_info( undef, undef, 'RT13865', 'COL_NUMBER' );
-cmp_ok $col_h->fetchrow_hashref->{COLUMN_SIZE}, '>', 0, 
+cmp_ok $col_h->fetchrow_hashref->{COLUMN_SIZE}, '>', 0,
     "NUMBER";
 
 $col_h = $dbh->column_info( undef, undef, 'RT13865', 'COL_VC2' );
-is $col_h->fetchrow_hashref->{COLUMN_SIZE} => 67, 
+is $col_h->fetchrow_hashref->{COLUMN_SIZE} => 67,
     "VARCHAR(67)";
 
 $col_h = $dbh->column_info( undef, undef, 'RT13865', 'COL_VC2_69CHAR' );
-is $col_h->fetchrow_hashref->{COLUMN_SIZE} => 69, 
+is $col_h->fetchrow_hashref->{COLUMN_SIZE} => 69,
     "VARCHAR(69)";
 
+$col_h = $dbh->column_info( undef, undef, 'RT13865', 'COL_NVC2' );
+is $col_h->fetchrow_hashref->{COLUMN_SIZE} => 69,
+    "NVARCHAR2(69)";
+
+$col_h = $dbh->column_info( undef, undef, 'RT13865', 'COL_NC' );
+is $col_h->fetchrow_hashref->{COLUMN_SIZE} => 69,
+    "NCHAR(69)";
+
+$col_h = $dbh->column_info( undef, undef, 'RT13865', 'COL_CHAR' );
+is $col_h->fetchrow_hashref->{COLUMN_SIZE} => 67,
+    "CHAR(67)";
+
+$col_h = $dbh->column_info( undef, undef, 'RT13865', 'COL_CHAR_69CHAR' );
+is $col_h->fetchrow_hashref->{COLUMN_SIZE} => 69,
+    "CHAR(69)";
 
 $dbh->do( 'DROP TABLE RT13865' );
 
